--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
             </li>
           </ul>
         </div>
+        <div class="news_posts">
+          <div class="news_post_item">
+            <div class="news_post_pic"><img class="news_post_img" src="img/content/country.jpg"></div><span class="post_category country">country</span>
+            <div class="news_post_descr">
+              <h3 class="news_post_title">12 photos Indonesian beauty  in your eyes</h3>
+              <p class="news_post_text">This is the reaction of many people is often asked when visiting a variety...</p>
+              <div class="news_post_info"><a class="news_post_link" href="#">Read more</a>
+                <div class="news_post_comment">12</div>
+                <div class="news_post_like"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
