--- a/index.html
+++ b/index.html
@@ -70,15 +70,25 @@
           </ul>
         </div>
         <div class="news_posts">
-          <div class="news_post_item">
+          <div class="news_post_item post_sm">
             <div class="news_post_pic"><img class="news_post_img" src="img/content/country.jpg"></div><span class="post_category country">country</span>
             <div class="news_post_descr">
-              <h3 class="news_post_title">12 photos Indonesian beauty  in your eyes</h3>
-              <p class="news_post_text">This is the reaction of many people is often asked when visiting a variety...</p>
+              <h3 class="news_post_title title_sm">12 photos Indonesian beauty  in your eyes</h3>
+              <p class="news_post_text text_sm">This is the reaction of many people is often asked when visiting a variety...</p>
               <div class="news_post_info"><a class="news_post_link" href="#">Read more</a>
-                <div class="news_post_comment">12</div>
-                <div class="news_post_like"></div>
+                <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>12</span></div>
+                <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
               </div>
+            </div>
+          </div>
+          <div class="news_post_item post_big post_people"><span class="post_category people">People</span>
+            <div class="news_post_descr post_descr_big">
+              <h3 class="news_post_title title_big">Ridwan Kamil role in Success  Story Organizing Surabaya </h3>
+              <p class="news_post_text text_big">Bandung many people skeptical and apathetic towards revamping the city of Bandung with all tangled Problems. Though if you want a little to learn from the neighboring town...</p><img class="people_img" src="img/content/people.png">
+            </div>
+            <div class="news_post_info post_info_big"><a class="news_post_link" href="#">Read more</a>
+              <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>12</span></div>
+              <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
             </div>
           </div>
         </div>
