--- a/index.html
+++ b/index.html
@@ -87,8 +87,30 @@
               <p class="news_post_text text_big">Bandung many people skeptical and apathetic towards revamping the city of Bandung with all tangled Problems. Though if you want a little to learn from the neighboring town...</p><img class="people_img" src="img/content/people.png">
             </div>
             <div class="news_post_info post_info_big"><a class="news_post_link" href="#">Read more</a>
-              <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>12</span></div>
+              <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>34</span></div>
               <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+            </div>
+          </div>
+          <div class="news_post_item post_sm">
+            <div class="news_post_pic"><img class="news_post_img" src="img/content/travel.jpg"></div><span class="post_category travel">travel</span>
+            <div class="news_post_descr">
+              <h3 class="news_post_title title_sm">This 10 Country Beautiful  Non-Asean Free Visa</h3>
+              <p class="news_post_text text_sm">When they wanted to travel but are reluctant to arrange a visa is a..</p>
+              <div class="news_post_info"><a class="news_post_link" href="#">Read more</a>
+                <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>30</span></div>
+                <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+              </div>
+            </div>
+          </div>
+          <div class="news_post_item post_sm">
+            <div class="news_post_pic"><img class="news_post_img" src="img/content/travel.jpg"></div><span class="post_category technology">technology</span>
+            <div class="news_post_descr">
+              <h3 class="news_post_title title_sm">Important Tips on Buying a  New Mobile-Based Android</h3>
+              <p class="news_post_text text_sm">Newly purchased device did many advantages, especially those...</p>
+              <div class="news_post_info"><a class="news_post_link" href="#">Read more</a>
+                <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>12</span></div>
+                <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+              </div>
             </div>
           </div>
         </div>
