--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/icon-114x114.png">
     <!-- Load Styles-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="js/slick/slick.css">
+    <link rel="stylesheet" href="js/slick/slick-theme.css">
     <link rel="stylesheet" href="css/main.css">
     <!-- Mixins-->
   </head>
@@ -45,7 +45,7 @@
               <h2 class="header_post_title">Value-Based Care‘s Data Problem</h2>
               <p class="header_post_text">For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.</p><a class="header_post_link" href="#">Read more</a>
             </div>
-            <div class="header_post_descr"><span class="header_post_category">TECHNOLOGY</span>
+            <div class="header_post_descr"><span class="header_post_category technology">TECHNOLOGY</span>
               <h2 class="header_post_title">How to Design for  Virtual Reality</h2>
               <p class="header_post_text">For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.</p><a class="header_post_link" href="#">Read more</a>
             </div>
@@ -113,8 +113,22 @@
               </div>
             </div>
           </div>
+          <div class="news_post_item post_sm"><span class="post_category economy">Economy</span>
+            <div class="news_post_descr">
+              <h3 class="news_post_title title_no_pic title_sm">Four Pillars Decide  Fate of Economy Indonesia</h3>
+              <p class="news_post_text text_no_pic text_sm">The domestic economy is still faced with a number of structural challenges. To achieve sustain...</p>
+              <div class="news_post_info"><a class="news_post_link" href="#">Read more</a>
+                <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>02</span></div>
+                <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+              </div>
+            </div>
+          </div>
+          <div class="news_post_item post_sm slick_slider"></div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" defer></script>
+    <script src="js/slick/slick.js" defer></script>
+    <script src="js/common.js" defer></script>
   </body>
 </html>
