--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
               <h2 class="header_post_title">Things To Do Before You're 30</h2>
               <p class="header_post_text">For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.</p><a class="header_post_link" href="#">Read more</a>
             </div>
-            <div class="header_post_descr"><span class="header_post_category">SCIENCE</span>
+            <div class="header_post_descr"><span class="header_post_category science">science</span>
               <h2 class="header_post_title">Value-Based Care‘s Data Problem</h2>
               <p class="header_post_text">For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.</p><a class="header_post_link" href="#">Read more</a>
             </div>
-            <div class="header_post_descr"><span class="header_post_category technology">TECHNOLOGY</span>
+            <div class="header_post_descr"><span class="header_post_category technology">technology</span>
               <h2 class="header_post_title">How to Design for  Virtual Reality</h2>
-              <p class="header_post_text">For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.</p><a class="header_post_link" href="#">Read more</a>
+              <p class="header_post_text">For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life.</p><a class="header_post_link" href="#">Read more</a>
             </div>
-            <div class="header_post_descr"><span class="header_post_category">EDUCATION</span>
+            <div class="header_post_descr"><span class="header_post_category education">education</span>
               <h2 class="header_post_title">What I Will Fret Over </h2>
-              <p class="header_post_text">For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.</p><a class="header_post_link" href="#">Read more</a>
+              <p class="header_post_text">For many it means that you’re no longer in the hard-partying.</p><a class="header_post_link" href="#">Read more</a>
             </div>
           </div>
           <ul class="header_post_info">
@@ -123,7 +123,44 @@
               </div>
             </div>
           </div>
-          <div class="news_post_item post_sm slick_slider"></div>
+          <div class="news_post_item post_sm">
+            <div class="post_slider_bg">
+              <div class="slick_slider">
+                <div class="post_slider_descr">
+                  <div class="post_category decor">home & decor</div>
+                  <h3 class="news_post_title">10 Caring for plants in the  courtyard house</h3>
+                  <div class="news_post_info post_info_full"><a class="news_post_link" href="#">Read more</a>
+                    <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>02</span></div>
+                    <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+                  </div>
+                </div>
+                <div class="post_slider_descr">
+                  <div class="post_category decor">home & decor</div>
+                  <h3 class="news_post_title">plants in the courtyard house</h3>
+                  <div class="news_post_info post_info_full"><a class="news_post_link" href="#">Read more</a>
+                    <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>25</span></div>
+                    <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+                  </div>
+                </div>
+                <div class="post_slider_descr">
+                  <div class="post_category decor">home & decor</div>
+                  <h3 class="news_post_title">10 Caring for plants in the  courtyard house</h3>
+                  <div class="news_post_info post_info_full"><a class="news_post_link" href="#">Read more</a>
+                    <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>17</span></div>
+                    <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+                  </div>
+                </div>
+                <div class="post_slider_descr">
+                  <div class="post_category decor">home & decor</div>
+                  <h3 class="news_post_title">plants in the  courtyard house</h3>
+                  <div class="news_post_info post_info_full"><a class="news_post_link" href="#">Read more</a>
+                    <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>9</span></div>
+                    <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
