--- a/index.html
+++ b/index.html
@@ -155,10 +155,19 @@
                   <h3 class="news_post_title">plants in the  courtyard house</h3>
                   <div class="news_post_info post_info_full"><a class="news_post_link" href="#">Read more</a>
                     <div class="news_post_comment"> <i class="fa fa-commenting-o news_comment"> </i><span>9</span></div>
-                    <div class="news_post_like"><i class="fa fa-heart-o"></i></div>
+                    <div class="news_post_like"><i class="fa fa-heart-o"> </i></div>
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="accordeon">
+            <h3 class="accordeon_title">Newest post</h3>
+            <div class="accordeon_item active">
+              <div class="accordeon_category">Travel</div>
+              <h3 class="accordeon_item_title">Similar exist Painting Mysterious Alien in  America</h3>
+              <p class="accordeon_item_text">Name Sego Canyon in the US has not been as popular as the Grand Canyon. </p>
+              <div class="accordeon_item_pic"><img class="accordeon_item_img" src="img/content/canyon.jpg"></div>
             </div>
           </div>
         </div>
