--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
             <h3 class="accordeon_title">Newest post</h3>
             <div class="accordeon_item active">
               <div class="accordeon_category">Travel</div>
-              <h3 class="accordeon_item_title">Similar exist Painting Mysterious Alien in America</h3>
+              <h3 class="accordeon_item_title">Similar exist Painting Mysterious Alien in America</h3><span class="accordeon_arrow"></span>
               <p class="accordeon_item_text">Name Sego Canyon in the US has not been as popular as the Grand Canyon. </p>
               <div class="accordeon_item_pic"><img class="accordeon_item_img" src="img/content/canyon.jpg"></div>
             </div>
             <div class="accordeon_item">
               <div class="accordeon_category">LIFESTYLE</div>
-              <h3 class="accordeon_item_title on_category_big">This Secret Branded Goods Shopping Deals New York</h3>
+              <h3 class="accordeon_item_title on_category_big">This Secret Branded Goods Shopping Deals New York</h3><span class="accordeon_arrow"></span>
               <p class="accordeon_item_text">Name Sego Canyon in the US has not been as popular as the Grand Canyon. </p>
               <div class="accordeon_item_pic"><img class="accordeon_item_img" src="img/content/canyon.jpg"></div>
             </div>
