--- a/index.html
+++ b/index.html
@@ -183,6 +183,18 @@
             </div>
           </div>
         </div>
+        <div class="load_more"><a class="load_more_link" href="#">Load More</a></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="footer_info">
+        <p class="design">Design from Afnizar Nur Ghifari</p>
+        <ul class="social">
+          <li><a class="social_link telegram" href="#"><i class="fa fa-paper-plane"></i></a></li>
+          <li><a class="social_link twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="social_link dribble" href="#"><i class="fa fa-dribbble"></i></a></li>
+          <li><a class="social_link behance" href="#"><i class="fa fa-behance"></i></a></li>
+        </ul>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" defer></script>
