add mob menu, partial adaptive

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <link rel="stylesheet" href="js/slick/slick.css">
     <link rel="stylesheet" href="js/slick/slick-theme.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <!-- Mixins-->
   </head>
   <body>
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <div class="logo"><a class="logo_link" href="#">Media</a></div>
-          <ul class="nav_menu">
+          <div class="logo"><a class="logo_link" href="#">Media</a></div><a class="mob_menu" href="#"></a>
+          <ul class="nav_menu active">
             <li><a class="nav_menu_link" href="#">Home</a></li>
             <li><a class="nav_menu_link" href="#">About</a></li>
             <li><a class="nav_menu_link" href="#">Contact</a></li>
