--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <nav class="navigation">
           <div class="logo"><a class="logo_link" href="#">Media</a></div><a class="mob_menu" href="#"></a>
-          <ul class="nav_menu active">
+          <ul class="nav_menu">
             <li><a class="nav_menu_link" href="#">Home</a></li>
             <li><a class="nav_menu_link" href="#">About</a></li>
             <li><a class="nav_menu_link" href="#">Contact</a></li>
